assets/control-bar: add styling to ensure control bar dropsdowns wrap at max width fixes #5169

--- a/meinberlin/assets/scss/components/_control-bar.scss
+++ b/meinberlin/assets/scss/components/_control-bar.scss
@@ -21,6 +21,11 @@
         }
     }
 
+    // ensure long entries wrap
+    .dropdown-item {
+        white-space: inherit;
+    }
+
     @media (max-width: $breakpoint) {
         .dropdown-toggle,
         .control-bar__item,
